--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="icon" href="./lookup-small-50x50.ico" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Catamaran:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <!--
